[package]
name = "ion-gst-rs"
version = "0.1.0"
authors = ["Billy Lindeman <billylindeman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.50"
async-tungstenite = { version = "0.13.1", features = ["gio-runtime"]}
futures = "0.3.14"
glib = "0.10.3"
jsonrpc-ws-client = "11.0.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"



[[bin]]
name = "signal"
path = "src/bin/signal.rs"
