[package]
name = "ion-gst-rs"
version = "0.1.0"
authors = ["Billy Lindeman <billylindeman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.9.0"
async-trait = "0.1.50"
async-tungstenite = { version = "0.13.1", features = ["gio-runtime"]}
derive_more = "0.99.13"
futures = "0.3.14"
glib = "0.10.3"
jsonrpsee =  { git = "https://github.com/paritytech/jsonrpsee", features = ["full"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
url = "2.2.1"



[[bin]]
name = "signal"
path = "src/bin/signal.rs"
