[package]
name = "ion-gst-rs"
version = "0.1.0"
authors = ["Billy Lindeman <billylindeman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.9.0"
async-trait = "0.1.50"
async-tungstenite = { version = "0.13.1", features = ["gio-runtime"]}
derive_more = "0.99.13"
futures = "0.3.14"
glib = "0.10.3"
gst = { package = "gstreamer", version = "0.16", features = ["v1_14"] }
gst-webrtc = { package = "gstreamer-webrtc", version = "0.16" }
gst-sdp = { package = "gstreamer-sdp", version = "0.16", features = ["v1_14"] }
maplit = "1.0.2"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
url = "2.2.1"
log = "0.4.14"


#jsonrpsee =  { git = "https://github.com/paritytech/jsonrpsee", features = ["full"] }
jsonrpsee =  { git = "https://github.com/billylindeman/jsonrpsee", features = ["full"] }
#jsonrpsee =  { path = "../jsonrpsee/jsonrpsee", features = ["full"] }
pretty_env_logger = "0.4.0"
async-mutex = "1.4.0"
enclose = "1.1.8"
anyhow = "1.0.40"

[[bin]]
name = "signal"
path = "src/bin/signal.rs"
